# fence-agents

fence/agents/lib/: fencing.py.py
fence/agents/powerman/: Makefile.am
